java21化 #15